--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 .psd filter=lfs diff=lfs merge=lfs -text
 .cs filter=lfs diff=lfs merge=lfs -text
+*.asset filter=lfs diff=lfs merge=lfs -text
+*.prefab filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
+*.meta filter=lfs diff=lfs merge=lfs -text
+*.unity filter=lfs diff=lfs merge=lfs -text
